Updated : button label

--- a/src/app/features/auth/register/register/register.component.html
+++ b/src/app/features/auth/register/register/register.component.html
@@ -8,7 +8,7 @@
       <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius:53px">
         <button pButton pRipple type="button" icon="pi pi-arrow-left" class="p-button-rounded"
                 style="margin-bottom: 5rem"
-                label="Retour" routerLink="/"></button>
+                label="Accueil" routerLink="/"></button>
         <div class="text-center mb-5">
           <img src="assets/layout/images/avatar.png" alt="Image" style="height: 70px; border-radius:50%" class="mb-3">
           <div class="text-900 text-3xl font-medium mb-3">Créez votre compte</div>
