Added : show role in crud user

--- a/src/app/core/components/crud-user-admin/crud-user-admin.component.html
+++ b/src/app/core/components/crud-user-admin/crud-user-admin.component.html
@@ -54,7 +54,7 @@
               <p-tableCheckbox [value]="user"></p-tableCheckbox>
             </td>
             <td><span class="p-column-title">Email</span>{{ user.email }}</td>
-            <td><span class="p-column-title">Rôle</span>{{ user.role }}</td>
+            <td><span class="p-column-title">Rôle</span>{{ user.roles[0] }}</td>
             <td>
               <div class="flex">
                 <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
