--- a/src/app/core/components/crud-user-admin/crud-user-admin.component.html
+++ b/src/app/core/components/crud-user-admin/crud-user-admin.component.html
@@ -81,8 +81,8 @@
 
           <div class="field">
             <label for="role">Rôle</label>
-            <p-selectButton id="role" [(ngModel)]="user.role" [options]="roles" required></p-selectButton>
-            <small *ngIf="submitted && !user.role" class="ng-dirty ng-invalid">Le rôle est requis.</small>
+            <p-selectButton id="role" [(ngModel)]="user.roles" [options]="roles" required></p-selectButton>
+            <small *ngIf="submitted && !user.roles" class="ng-dirty ng-invalid">Le rôle est requis.</small>
           </div>
 
           <div class="field" *ngIf="!user.id">
