--- a/src/app/features/runPublicList/run-public-list/run-public-list.component.html
+++ b/src/app/features/runPublicList/run-public-list/run-public-list.component.html
@@ -173,7 +173,7 @@
             </ng-template>
             <ng-template pTemplate="emptymessage">
               <tr>
-                <td colspan="11">No runs found.</td>
+                <td colspan="11">Pas de courses trouvées dans notre base de donnée.</td>
               </tr>
             </ng-template>
             <ng-template pTemplate="loadingbody">
