--- a/src/app/features/home/homepage/homepage.component.html
+++ b/src/app/features/home/homepage/homepage.component.html
@@ -231,7 +231,7 @@
                 class="p-button-rounded text-xl border-none mt-3 bg-blue-500 font-normal line-height-3 px-3 text-white"></button>
       </div>
 
-      <!--CAROUSEL-->
+      <!-- CAROUSEL -->
       <div class="col-12 mt-8 mb-8 p-2 md:p-8">
         <p-carousel
           [value]="products"
@@ -254,7 +254,8 @@
                     pRipple
                     icon="pi pi-search"
                     class="mr-2 p-button-rounded border-none mt-3 bg-yellow-100 font-normal line-height-3 px-3 text-black-alpha-90"
-                    [routerLink]="product.route">
+                    (click)="navigateToProduct(product)"> <!-- Utilisation du click pour la navigation -->
+                    En savoir plus
                   </button>
                 </div>
               </div>
@@ -262,6 +263,7 @@
           </ng-template>
         </p-carousel>
       </div>
+      <!-- END CAROUSEL -->
       <app-footer></app-footer>
     </div>
   </div>
