--- a/src/app/features/auth/login/login/login.component.html
+++ b/src/app/features/auth/login/login/login.component.html
@@ -21,7 +21,8 @@
                  class="w-full md:w-30rem mb-5" style="padding:1rem">
 
           <label for="password1" class="block text-900 font-medium text-xl mb-2">Mot de passe</label>
-          <p-password id="password1" [(ngModel)]="password" placeholder="Entrez votre mot de passe" [toggleMask]="true" [feedback]="false"
+          <p-password id="password1" [(ngModel)]="password" placeholder="Entrez votre mot de passe" [toggleMask]="true"
+                      [feedback]="false"
                       styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password>
 
           <div class="flex align-items-center justify-content-between mb-5 gap-5">
@@ -29,7 +30,8 @@
               <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
               <label for="rememberme1">Se souvenir de moi</label>
             </div>
-            <a class="font-medium no-underline ml-2 text-right cursor-pointer" style="color: var(--primary-color)">Mot
+            <a routerLink="/forgot-password" class="font-medium no-underline ml-2 text-right cursor-pointer"
+               style="color: var(--primary-color)">Mot
               de
               passe oublié ?</a>
           </div>
