--- a/src/app/core/components/forgot-password/forgot-password.component.html
+++ b/src/app/core/components/forgot-password/forgot-password.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
   <div class="flex flex-column align-items-center justify-content-center">
     <img src="assets/layout/images/logoA2-dark.png" alt="Sakai logo" class="mb-5 w-6rem flex-shrink-0">
@@ -16,8 +17,6 @@
                    class="w-full md:w-30rem mb-5" style="padding:1rem">
           </div>
           <button pButton pRipple label="Envoyer" class="w-full p-3 text-xl" type="submit"></button>
-          <div *ngIf="errorMessage" class="text-red-600 mt-2">{{ errorMessage }}</div>
-          <div *ngIf="successMessage" class="text-green-600 mt-2">{{ successMessage }}</div>
         </form>
       </div>
     </div>
