--- a/src/app/features/runPublicList/run-public-list/run-public-list.component.html
+++ b/src/app/features/runPublicList/run-public-list/run-public-list.component.html
@@ -21,6 +21,7 @@
       <div class="col-12">
         <div class="card">
           <h5>Les prochaines courses disponibles chez A2RunAlliance</h5>
+
           <section>
             <p class="mt-0 mb-4 text-700 line-height-3">
               Sur cette page, vous pouvez trier les courses par différents critères tels que le titre, le lieu, le
@@ -127,7 +128,7 @@
                 <td>
                   <button type="button" pButton pRipple [pRowToggler]="run"
                           class="p-button-text p-button-rounded p-button-plain"
-                          [icon]="expanded?'pi-chevron-down':'pi-chevron-right'"></button>
+                          [icon]="expanded?'pi pi-chevron-down':'pi pi-chevron-right'"></button>
                 </td>
                 <td>{{ run.title }}</td>
                 <td>{{ run.location }}</td>
