--- a/src/app/features/runPublicList/run-public-list/run-public-list.component.html
+++ b/src/app/features/runPublicList/run-public-list/run-public-list.component.html
@@ -174,6 +174,22 @@
               </tr>
             </ng-template>
           </p-table>
+          <!-- Dialog pour afficher les participants -->
+          <p-dialog [(visible)]="participantsDialogVisible" [modal]="true"
+                    header="Participants inscrits">
+            <p-table [value]="participants" [paginator]="true" [rows]="10">
+              <ng-template pTemplate="header">
+                <tr>
+                  <th>Email</th>
+                </tr>
+              </ng-template>
+              <ng-template pTemplate="body" let-participant>
+                <tr>
+                  <td>{{ participant.userEmail }}</td> <!-- E-mail de l'utilisateur -->
+                </tr>
+              </ng-template>
+            </p-table>
+          </p-dialog>
         </div>
       </div>
     </div>
